configure option --enable-final - compilation speedup
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3663 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -383,6 +383,20 @@ moc/%_moc.cpp: %.h
 	@echo $(QT_MOC_DIR)/moc -o $@ $< >> $(LOGFILE)
 	@$(QT_MOC_DIR)/moc -o $@ $<
 
+ ifeq ($(enable_final),yes)
+
+kadu$(EXEEXT): $(kadu_SOURCES) $(kadu_HEADERS) $(BUILT_SOURCES) $(kadu_DEPENDENCIES) 
+	@rm -f kadu$(EXEEXT)
+	$(CXXCOMPILE) $(AM_LDFLAGS) $(LDFLAGS) -o $@ $(kadu_LDFLAGS) final.cpp $(kadu_LDADD) $(LIBS)
+
+ else
+
+kadu$(EXEEXT): $(kadu_OBJECTS) $(kadu_DEPENDENCIES) 
+	@rm -f kadu$(EXEEXT)
+	$(CXXLINK) $(kadu_LDFLAGS) $(kadu_OBJECTS) $(kadu_LDADD) $(LIBS)
+
+ endif
+
 ###########################################################################
 # Precompiled headers support
 ###########################################################################
