--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -113,6 +113,7 @@ build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
 enable_dependency_tracking = @enable_dependency_tracking@
+enable_final = @enable_final@
 enable_pheaders = @enable_pheaders@
 enabled_icon_themes = @enabled_icon_themes@
 exec_prefix = @exec_prefix@
