akcja chat, toolbary w oknie search
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3670 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -85,6 +85,9 @@ LoadingImage=loading.png
 AboutIcon=abouticon.png
 CloseWindow=stop.png
 
+NextSearchResults=forward.png
+ClearSearchResults=eraser.png
+
 OkWindowButton=reload.png
 ApplyWindowButton=reload.png
 CloseWindowButton=stop.png
