enable-final building - fixes in deps
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3671 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -308,11 +308,15 @@ uninstall-am: uninstall-info-am uninstall-local
 	uninstall-local
 
 
-# dirty hack - leading space required because od automake "if" support
+# dirty hack - leading space required because of automake "if" support
 # time to say automake goodbye?
  ifeq ($(enable_dependency_tracking),yes)
  ifneq (,$(module_d_files))
+ ifeq ($(enable_final),yes)
+-include $(module_name)/.final.d
+ else
 -include $(module_d_files)
+ endif
  endif
  endif
 
@@ -323,8 +327,8 @@ $(module_moc_cpp_files):
 
  ifeq ($(enable_final),yes)
 
-%.$(SO_EXT): $(module_src_files) $(module_moc_cpp_files) $(module_h_files)
-	@dir=`echo $@ | sed "s/\(.*\)\/.*/\1/"` && \
+%.$(SO_EXT): $(module_src_files) $(module_moc_cpp_files) $(module_h_files) $(module_name)/.final.d
+	@dir="$$module_name" && \
 	fincpp="$$dir/.final.cpp" && \
 	finc="$$dir/.final.c" && \
 	if test -f $$finc; then \
@@ -337,8 +341,8 @@ $(module_moc_cpp_files):
 	echo "$(CXX) $(SHARED_OPT) -o $@ -fPIC $$fincpp $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) $(module_ldflags) $(SHARED_FLAGS)" >> $(LOGFILE) && \
 	$(CXX) $(SHARED_OPT) -o $@ -fPIC $$fincpp $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) $(module_ldflags) $(SHARED_FLAGS)
 
-%.a: $(module_src_files) $(module_moc_cpp_files) $(module_h_files)
-	@dir=`echo $@ | sed "s/\(.*\)\/.*/\1/"` && \
+%.a: $(module_src_files) $(module_moc_cpp_files) $(module_h_files) $(module_name)/.final.d
+	@dir="$$module_name" && \
 	fincpp="$$dir/.final.cpp" && \
 	finc="$$dir/.final.c" && \
 	if test -f $$finc; then \
@@ -495,7 +499,8 @@ $(module_targets):
 	if test -z `expr " $(shared_modules) " : ".* \($$dir\) "`; then \
 		file_name=$$dir.a; \
 	fi && \
-	$(MAKE) "module_o_files=$$o_files" \
+	$(MAKE) "module_name=$$dir" \
+		"module_o_files=$$o_files" \
 		"module_src_files=$$src_files" \
 		"module_h_files=$$h_files" \
 		"module_moc_cpp_files=$$moc_cpp_files" \
