--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -49,6 +49,7 @@ AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 CC = @CC@
+
 CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
@@ -333,9 +334,9 @@ $(module_moc_cpp_files):
 	finc="$$dir/.final.c" && \
 	if test -f $$finc; then \
 		echo compiling c files for module $$dir && \
-		echo "$(CC) -o $$dir/.final.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS)" >> $(LOGFILE) && \
-		$(CC) -o $$dir/.final.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS); \
-		fincpp="$$fincpp $$dir/.final.o"; \
+		echo "$(CC) -o $$dir/.final.c.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS)" >> $(LOGFILE) && \
+		$(CC) -o $$dir/.final.c.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS); \
+		fincpp="$$fincpp $$dir/.final.c.o"; \
 	fi && \
 	echo compiling and linking module $$dir && \
 	echo "$(CXX) $(SHARED_OPT) -o $@ -fPIC $$fincpp $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) $(module_ldflags) $(SHARED_FLAGS)" >> $(LOGFILE) && \
@@ -345,16 +346,18 @@ $(module_moc_cpp_files):
 	@dir="$$module_name" && \
 	fincpp="$$dir/.final.cpp" && \
 	finc="$$dir/.final.c" && \
+	fino="$$dir/.final.cpp.o" && \
 	if test -f $$finc; then \
 		echo compiling c files for module $$dir && \
-		echo "$(CC) -o $$dir/.final.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS)" >> $(LOGFILE) && \
-		$(CC) -o $$dir/.final.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS); \
-		fincpp="$$fincpp $$dir/.final.o"; \
+		echo "$(CC) -o $$dir/.final.c.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CFLAGS)" >> $(LOGFILE) && \
+		$(CC) -o $$dir/.final.c.o -c -fPIC $$finc $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CFLAGS); \
+		fino="$$fino $$dir/.final.c.o"; \
 	fi && \
 	echo compiling static module $$dir && \
-	$(CXX) -c -o $@.tmp -fPIC $$fincpp $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) && \
-	$(AR) rs $@ $@.tmp && \
-	rm -f $@.tmp
+	echo "$(CXX) -c -o $$dir/.final.cpp.o -fPIC $$fincpp $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS)" >> $(LOGFILE) && \
+	$(CXX) -c -o $$dir/.final.cpp.o -fPIC $$fincpp $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS) && \
+	echo "$(AR) rs $@ $$fino" >> $(LOGFILE) && \
+	$(AR) rs $@ $$fino
 
  else
 
@@ -387,8 +390,8 @@ $(module_moc_cpp_files):
 
 %.o: %.c
 	@echo compiling file $<
-	@echo "$(CC) -o $@ -c -fPIC $< $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS)" >> $(LOGFILE)
-	$(CC) -o $@ -c -fPIC $< $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CXXFLAGS)
+	@echo "$(CC) -o $@ -c -fPIC $< $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CFLAGS)" >> $(LOGFILE)
+	$(CC) -o $@ -c -fPIC $< $(CONFIGURE_INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags) $(CFLAGS)
 
 %_moc.cpp: %.h
 	@echo generating $@
