--- a/translations/Makefile.am
+++ b/translations/Makefile.am
@@ -22,7 +22,9 @@ uninstall-local:
 	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_pl.qm"; \
 	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_it.qm"; \
 	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_de.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/kadu_fr.qm"; \
 	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_en.qm"; \
-	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_pl.qm";
-	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_it.qm";
-	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_de.qm";
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_pl.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_it.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_de.qm"; \
+	rm -f "$(DESTDIR)$(datadir)/kadu/translations/qt_fr.qm";
