--- a/.config
+++ b/.config
@@ -291,6 +291,10 @@ module_firewall=n
 # PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
 module_iwait4u=n
 
+# Description: Notification by external commands module
+# PL: Modu³ powiadamiania o zdarzeniach za pomoc± zewnêtrznych poleceñ
+module_exec_notify=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
