--- a/.config
+++ b/.config
@@ -11,47 +11,48 @@
 # m - module, compiles as .so (shared)
 # n - no, module disabled
 #
-# PL: Poniej znajduje siï¿½lista wewnï¿½rznych moduï¿½ Kadu, stworzonych przez Kadu Team
-# PL: lub przez inne osoby, ale umieszczone w rï¿½ach ze wzglï¿½u na ich uytecznoï¿½#
-# PL: y - wkompiluj modu na stae w Kadu (statycznie)
-# PL: m - kompiluj jako adowalny modu (biblioteka dzielona)
+# PL: Poni¿ej znajduje siê lista wewnêtrznych modu³ów Kadu, stworzonych przez Kadu Team
+# PL: lub przez inne osoby, ale umieszczone w ¼ród³ach ze wzglêdu na ich u¿yteczno¶æ
+#
+# PL: y - wkompiluj modu³ na sta³e w Kadu (statycznie)
+# PL: m - kompiluj jako ³adowalny modu³ (biblioteka dzielona)
 # PL: n - nie kompiluj wcale
 #
-# PL: w polu "needs" znajduje siï¿½lista bibliotek potrzebnych do kompilacji moduu
-# PL:                (w dystrybucjach pakietowych zwrï¿½ uwagï¿½na to, e obrï¿½z
-# PL:                np. pakietu libsndfile do kompilacji bï¿½ziesz potrzebowa
-# PL:                take pakietu libsndfile-dev lub libsndfile-devel)
-# PL: w polu "depends" znajduje siï¿½lista innych moduï¿½ wymaganych
-# PL:                do dziaania tego moduu
+# PL: w polu "needs" znajduje siê lista bibliotek potrzebnych do kompilacji modu³u
+# PL:                (w dystrybucjach pakietowych zwróæ uwagê na to, ¿e obrócz
+# PL:                np. pakietu libsndfile do kompilacji bêdziesz potrzebowa³
+# PL:                tak¿e pakietu libsndfile-dev lub libsndfile-devel)
+# PL: w polu "depends" znajduje siê lista innych modu³ów wymaganych
+# PL:                do dzia³ania tego modu³u
 
 #################### docking #########################################
 # PL: ############## dokowanie #######################################
 
 # Description: Tray icon support (common part of all docking modules)
-# PL: Obsuga ikony na tacce systemowej (wspï¿½na czï¿½ wszystkich moduï¿½ dokujcych)
+# PL: Obs³uga ikony na tacce systemowej (wspólna czê¶æ wszystkich modu³ów dokuj±cych)
 module_docking=y
 
 # Description: XLib tray docking techniques module (works in KDE, GNOME, Xfce, ...)
-# PL: Standardowy modu obsugi tacki systemowej przy pomocy bibliotek X11
-# PL: (dziaa m.in. w KDE, GNOME, Xfce, ...)
+# PL: Standardowy modu³ obs³ugi tacki systemowej przy pomocy bibliotek X11
+# PL: (dzia³a m.in. w KDE, GNOME, Xfce, ...)
 # Needs: libX11
 # Depends: docking
 module_x11_docking=m
 
 # Description: WindowMaker docking module
-# PL: Modu obsugi dokowania w WindowMakerze
+# PL: Modu³ obs³ugi dokowania w WindowMakerze
 # Needs: libX11
 # Depends: docking
 module_wmaker_docking=n
 
 # Description: Always on top window docking module
-# PL: Modu sucy symulacji dokowania przy pomocy maego okna
-# PL: (bez ramek i z ustawion flag "Zawsze na wierzchu")
+# PL: Modu³ s³u¿±cy symulacji dokowania przy pomocy ma³ego okna
+# PL: (bez ramek i z ustawion± flag± "Zawsze na wierzchu")
 # Depends: docking
 module_desktop_docking=n
 
 # Description: MacOS X docking module
-# PL: Modu sucy symulacji dokowania na MacOS X
+# PL: Modu³ s³u¿±cy symulacji dokowania na MacOS X
 # Depends: docking
 module_macosx_docking=n
 
@@ -59,86 +60,88 @@ module_macosx_docking=n
 # PL: ################ powiadamianie #################################
 
 # Description: General notification module (common part of all notification modules)
-# PL: Podstawowa obsuga powiadomieï¿½o zdarzeniach (wspï¿½na czï¿½ wszystkich
-# PL:                                               moduï¿½ powiadomieï¿½
+# PL: Podstawowa obs³uga powiadomieñ o zdarzeniach (wspólna czê¶æ wszystkich
+# PL:                                               modu³ów powiadomieñ)
 module_notify=y
 
 # Description: Notification by window module
-# PL: Powiadamianie za pomoc wyskakujcego okienka
+# PL: Powiadamianie za pomoc± wyskakuj±cego okienka
 # Depends: notify
 module_window_notify=m
 
 # Description: Notification by hints module
-# PL: Powiadamianie za pomoc dymkï¿½
+# PL: Powiadamianie za pomoc± dymków
 # Depends: notify
 module_hints=m
 
 # Description: Speech synthesis support ("powiedz")
-# PL: Powiadamianie mow za pomoc programu "powiedz"
+# PL: Powiadamianie mow± za pomoc± programu "powiedz"
 # Depends: notify
 module_speech=n
 
 ##################### sound ##########################################
-# PL: ############### dwiï¿½ #########################################
+# PL: ############### d¼wiêk #########################################
 
 # Description: General sound support (common part of all sound modules)
-# PL: Podstawowa obsuga dwiï¿½u (wspï¿½na czï¿½ wszystkich moduï¿½ dwiï¿½owych)
+# PL: Podstawowa obs³uga d¼wiêku (wspólna czê¶æ wszystkich modu³ów d¼wiêkowych)
 # Needs: libsndfile
 # Depends: notify
 module_sound=y
 
 # Description: ALSA sound support
-# PL: Obsuga dwiï¿½u przez ALSï¿½# Needs: libasound
+# PL: Obs³uga d¼wiêku przez ALSÊ
+# Needs: libasound
 # Depends: sound
 module_alsa_sound=n
 
 # Description: Direct /dev/dsp sound support (Open Sound System)
-# PL: Obsuga dwiï¿½u przez bezporedni dostï¿½ do urzdzenia /dev/dsp (Open Sound System)
+# PL: Obs³uga d¼wiêku przez bezpo¶redni dostêp do urz±dzenia /dev/dsp (Open Sound System)
 # Depends: sound
 module_dsp_sound=m
 
 # Description: aRts sound server support
-# PL: Obsuga dwiï¿½u przez serwer aRts
+# PL: Obs³uga d¼wiêku przez serwer aRts
 # Needs: libartsc
 # Depends: sound
 module_arts_sound=n
 
 # Description: ESD sound server support
-# PL: Obsuga dwiï¿½u przez serwer ESD
+# PL: Obs³uga d¼wiêku przez serwer ESD
 # Needs: libesd
 # Depends: sound
 module_esd_sound=n
 
 # Description: Network Audio System support
-# PL: Obsuga dwiï¿½u przez Network Audio System
+# PL: Obs³uga d¼wiêku przez Network Audio System
 # Needs: libaudio
 # Depends: sound
 module_nas_sound=n
 
 # Description: External application sound support
-# PL: Obsuga dwiï¿½u poprzez zewnï¿½rzn aplikacjï¿½# Depends: sound
+# PL: Obs³uga d¼wiêku poprzez zewnêtrzn± aplikacjê
+# Depends: sound
 module_ext_sound=m
 
 ###################### p2p ###########################################
-# PL: ################ poczenia bezporednie #######################
+# PL: ################ po³±czenia bezpo¶rednie #######################
 
 # Description: dcc module with file transfer support
-# PL: Podstawowy modu obsugi poczeï¿½bezporednich wraz z przesyaniem plikï¿½
+# PL: Podstawowy modu³ obs³ugi po³±czeñ bezpo¶rednich wraz z przesy³aniem plików
 module_dcc=m
 
 # Description: Voice chat support
-# PL: Obsuga rozmï¿½ gosowych
+# PL: Obs³uga rozmów g³osowych
 # Depends: dcc, sound
 module_voice=m
 
 ###################### sms ###########################################
 
 # Description: General SMS support module
-# PL: Podstawowy modu obsugi bramek SMSowych
+# PL: Podstawowy modu³ obs³ugi bramek SMSowych
 module_sms=m
 
 # Description: Default Polish gateways for SMS module
-# PL: Obsuga najwaniejszych polskich bramek SMSowych (Era, Idea, Plus)
+# PL: Obs³uga najwa¿niejszych polskich bramek SMSowych (Era, Idea, Plus)
 # Depends: sms
 module_default_sms=m
 
@@ -146,38 +149,38 @@ module_default_sms=m
 # PL: ################ inne ##########################################
 
 # Description: Register / unregister account, remind / change password support
-# PL: Obsuga rejestracji / wyrejestrowywania konta, przypominania / zmiany hasa
+# PL: Obs³uga rejestracji / wyrejestrowywania konta, przypominania / zmiany has³a
 module_account_management=m
 
 # Description: OpenSSL encrypted chat support
-# PL: Obsuga szyfrowania wiadomoci przy pomocy OpenSSLa
+# PL: Obs³uga szyfrowania wiadomo¶ci przy pomocy OpenSSLa
 # Needs: libcrypto, libssl
 module_encryption=m
 
 # Description: Auto away module
-# PL: Obsuga automatycznej zmiany statusu po okrelonym czasie bezczynnoci
+# PL: Obs³uga automatycznej zmiany statusu po okre¶lonym czasie bezczynno¶ci
 module_autoaway=m
 
 # Description: Configuration wizard module
-# PL: Modu konfiguracji Kadu za pomoc wizarda (kreatora)
+# PL: Modu³ konfiguracji Kadu za pomoc± wizarda (kreatora)
 # Depends: account_management sound hints
 module_config_wizard=m
 
 # Description: Migration utility
-# PL: Narzï¿½zie do migracji
+# PL: Narzêdzie do migracji
 module_migration=m
 
 # Description: Autoresponder module
-# PL: Modu automatycznej odpowiedzi
+# PL: Modu³ automatycznej odpowiedzi
 module_autoresponder=m
 
 # Description: Echo module (it's only example!)
-# PL: Modu automatycznej odpowiedzi z przedrostkiem "KADU ECHO: "
-# PL: (to tylko przykad jak siï¿½pisze moduy do Kadu)
+# PL: Modu³ automatycznej odpowiedzi z przedrostkiem "KADU ECHO: "
+# PL: (to tylko przyk³ad jak siê pisze modu³y do Kadu)
 module_echo=n
 
 ############################################# EXTERNAL ###########################################################################
-# PL: ####################################### ZEWNï¿½RZNE #########################################################################
+# PL: ####################################### ZEWNÊTRZNE #########################################################################
 
 #
 # Below there are some external modules, made by third parties, but
@@ -191,23 +194,24 @@ module_echo=n
 # n - no, module disabled
 #
 
-# PL: Poniej znajduje siï¿½lista zewnï¿½rznych moduï¿½, stworzonych przez niezalenych programistï¿½,
-# PL: ale zaakceptowanych przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz ktï¿½y
-# PL: z tych moduï¿½, jego rï¿½a zostan pobrane ze strony twï¿½cy, wiï¿½ w razie problemï¿½ nie wiï¿½# PL: nas z powodu ich (prawdopodobnie czasowej) niedostï¿½noci.
+# PL: Poni¿ej znajduje siê lista zewnêtrznych modu³ów, stworzonych przez niezale¿nych programistów,
+# PL: ale zaakceptowanych przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz który¶
+# PL: z tych modu³ów, jego ¼ród³a zostan± pobrane ze strony twórcy, wiêc w razie problemów nie wiñ
+# PL: nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
 
 # Description: XMMS player support
-# PL: Obsuga statusï¿½ pobieranych z XMMSa oraz jego kontrola z poziomu okna rozmowy
+# PL: Obs³uga statusów pobieranych z XMMSa oraz jego kontrola z poziomu okna rozmowy
 # Needs: libxmms
 # Depends: notify
 module_xmms=n
 
 # Description: AmaroK player support
-# PL: Obsuga statusï¿½ pobieranych z Amaroka
+# PL: Obs³uga statusów pobieranych z Amaroka
 # Needs: libkdecore
 module_amarok=n
 
 # Description: Description from file module
-# PL: Obsuga statusï¿½ pobieranych z pliku
+# PL: Obs³uga statusów pobieranych z pliku
 module_filedesc=n
 
 # Description: Mail checker module
@@ -216,7 +220,7 @@ module_filedesc=n
 module_mail=n
 
 # Description: Spellchecking in chat window
-# PL: Sprawdzanie bï¿½ï¿½ pisowni w oknie rozmowy
+# PL: Sprawdzanie b³êdów pisowni w oknie rozmowy
 # Needs: libaspell
 module_spellchecker=n
 
@@ -227,18 +231,18 @@ module_spellchecker=n
 module_pcspeaker=n
 
 # Description: Notification by XOSD
-# PL: Powiadamianie w stylu OSD za pomoc biblioteki libxosd
+# PL: Powiadamianie w stylu OSD za pomoc± biblioteki libxosd
 # Needs: libxosd, libgtk
 # Depends: notify
 module_xosd_notify=n
 
 # Description: Weather checking
-# PL: Sprawdzanie pogody dla kontaktï¿½
+# PL: Sprawdzanie pogody dla kontaktów
 # Depends: hints
 module_weather=n
 
 # Description: ao library sound module (ALSA, OSS, ESD, AIX, IRIX, NAS, Sun, NenBSD, OpenBSD)
-# PL: Obsuga dwiï¿½u przy pomocy biblioteki libao (ktï¿½a obsuguje:
+# PL: Obs³uga d¼wiêku przy pomocy biblioteki libao (która obs³uguje:
 # PL:                                    ALSA, OSS, ESD, AIX, IRIX, NAS, Sun, NenBSD, OpenBSD)
 # Needs: libao
 # Depends: sound
@@ -250,33 +254,33 @@ module_ao_sound=n
 module_ext_info=n
 
 # Description: Exports some functions via DCOP
-# PL: Eksportuje czï¿½ funkcji Kadu poprzez DCOP (umoliwa m.in. obsugï¿½linkï¿½ gg://xxx)
+# PL: Eksportuje czê¶æ funkcji Kadu poprzez DCOP (umo¿liwa m.in. obs³ugê linków gg://xxx)
 # Needs: libkdecore
 # Depends: notify, dcc, sms
 module_dcopexport=n
 
 # Description: Miasto Plusa SMS Gateway support
-# PL: Obsuga bramki SMSowej "Miasto Plusa"
+# PL: Obs³uga bramki SMSowej "Miasto Plusa"
 # Needs: libcurl, libssl
 # Depends: sms
 module_miastoplusa_sms=n
 
 # Description: Tabbed chat dialog module
-# PL: Modu okna rozmowy z zakadkami
+# PL: Modu³ okna rozmowy z zak³adkami
 module_tabs=n
 
 # Description: Notification by Scroll Lock LED
-# PL: Powiadamiania diod Scroll Lock
+# PL: Powiadamiania diod± Scroll Lock
 # Needs: libX11
 # Depends: notify
 module_led_notify=n
 
 # Description: 
-# PL: Dodaje moliwoï¿½zaznaczenia fragmentu ekranu i wysania obrazka z jego zawartoci
+# PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
 module_screenshot=n
 
 # Description: Notification by OSD-like hints
-# PL: Powiadamianie o zdarzeniach przy pomocy dymkï¿½ typu OSD
+# PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
 module_osdhints_notify=n
 
 # Description: Protection against unwanted chats
@@ -284,11 +288,12 @@ module_osdhints_notify=n
 module_firewall=n
 
 # Description: Shows message, when user you're waiting for is online.
-# PL: Informuje o dostï¿½noci kontaktu, na ktï¿½y czekamy.
+# PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
 module_iwait4u=n
 
 # Description: Notification by external commands module
-# PL: Modu powiadamiania o zdarzeniach za pomoc zewnï¿½rznych poleceï¿½module_exec_notify=n
+# PL: Modu³ powiadamiania o zdarzeniach za pomoc± zewnêtrznych poleceñ
+module_exec_notify=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
@@ -302,12 +307,12 @@ module_iwait4u=n
 # n - no, icon theme disabled
 #
 
-# PL: Poniej znajduje siï¿½lista zestawï¿½ ikon. Gdy wybierzesz ktï¿½y z nich,
-# PL: odpowiednia paczka zostanie pobrana ze strony twï¿½cy, wiï¿½ w razie problemï¿½
-# PL: nie wiï¿½nas z powodu ich (prawdopodobnie czasowej) niedostï¿½noci.
+# PL: Poni¿ej znajduje siê lista zestawów ikon. Gdy wybierzesz który¶ z nich,
+# PL: odpowiednia paczka zostanie pobrana ze strony twórcy, wiêc w razie problemów
+# PL: nie wiñ nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
 
 # Description: Default icon theme shipped with sources
-# PL: Standardowy zestaw ikon dostï¿½ny razem ze rï¿½ami Kadu
+# PL: Standardowy zestaw ikon dostêpny razem ze ¼ród³ami Kadu
 icons_default=y
 
 # Description: Crystal 16x16 icons made by Arcisz
