--- a/.config
+++ b/.config
@@ -327,5 +327,9 @@ icons_nuvola16=n
 # Description: Nuvola 22x22 icons by David Vignoni
 icons_nuvola22=n
 
+# Description: Glass 16x16 icons made Mariusz Waluga
+icons_glass16=n
+
 # Description: Glass 22x22 icons made Mariusz Waluga
-icons_glass=n
+icons_glass22=n
+
