Dodane do autodownloadu zestawy glass16 i glass22
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3723 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -320,3 +320,9 @@ icons_nuvola16=n
 
 # Description: Nuvola 22x22 icons by David Vignoni
 icons_nuvola22=n
+
+# Description: Glass 16x16 icons made Mariusz Waluga
+icons_glass16=n
+
+# Description: Glass 22x22 icons made Mariusz Waluga
+icons_glass22=n
