instalowanie nowych emotow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3800 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/Makefile.am
+++ b/varia/Makefile.am
@@ -16,13 +16,13 @@ install-data-local: uninstall-local
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/"
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/1/"	
 	$(INSTALL_DATA) themes/emoticons/gadu-gadu/1/*.gif "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/1/"
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/1/emots.txt "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/1/"
+	$(INSTALL_DATA) themes/emoticons/gadu-gadu/1/*.txt "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/1/"
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/2/"	
 	$(INSTALL_DATA) themes/emoticons/gadu-gadu/2/*.gif "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/2/"
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/2/*.GIF "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/2/"
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/2/emots.txt "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/2/"
+	$(INSTALL_DATA) themes/emoticons/gadu-gadu/2/*.txt "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/2/"
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/3/"
 	$(INSTALL_DATA) themes/emoticons/gadu-gadu/3/*.gif "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/3/"
+	$(INSTALL_DATA) themes/emoticons/gadu-gadu/3/*.GIF "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/3/"
 	$(INSTALL_DATA) themes/emoticons/gadu-gadu/3/*.txt "$(DESTDIR)$(datadir)/kadu/themes/emoticons/gadu-gadu/3/"
 
 	$(mkinstalldirs) "$(DESTDIR)$(bindir)/"	
