stary zestaw emotikon w autodownloadzie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3802 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -305,6 +305,8 @@ module_exec_notify=n
 #
 # y - yes, install with kadu
 # n - no, icon theme disabled
+# PL: y - Tak, zainstaluj z kadu
+# PL: n - Nie, zestaw wylaczony
 #
 
 # PL: Poni¿ej znajduje siê lista zestawów ikon. Gdy wybierzesz który¶ z nich,
@@ -333,3 +335,19 @@ icons_glass16=n
 # Description: Glass 22x22 icons made Mariusz Waluga
 icons_glass22=n
 
+########################################### EMOTICONS #########################################################################
+# PL: ##################################### EMOTIKONY #########################################################################
+
+#
+# Below are some emoticon themes.
+# PL: Poni¿ej znajduje siê lista zestawów emotikon.
+
+# y - yes, install with kadu
+# n - no, emoticon theme disabled
+# PL: y - Tak, zainstaluj z kadu
+# PL: n - Nie, zestaw wylaczony
+
+
+# Description: Old Gadu-Gadu 6.x versiona
+# PL: Kompatybilne z stara wersja Gadu-Gadu 6.x
+kompatybilne_z_GG6=n
